--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
             <version>1.1.1</version>
         </dependency>
         <dependency>
+            <groupId>xyz.capybara</groupId>
+            <artifactId>clamav-client</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
